# ml-service

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  extra_sms.csv  pyproject.toml
backend/: Dockerfile  Makefile  dvc.yaml  extra_sms.csv  pyproject.toml  sms_formatted.csv
backend/configs/: params.yaml
backend/data/: train_data.csv
backend/experiments/0001/: metrics.json  model.onnx
backend/experiments/0002/: model.onnx
backend/experiments/0003/: model.onnx
backend/experiments/0004/: model.onnx
backend/experiments/0005/: model.onnx
backend/experiments/0006/: metrics.json  model.onnx
backend/experiments/0007/: model.onnx
backend/experiments/0008/: model.onnx
backend/experiments/0009/: metrics.json  model.onnx
backend/experiments/0010/: metrics.json  model.onnx
backend/experiments/0011/: model.onnx
backend/experiments/0012/: model.onnx
backend/experiments/0013/: model.onnx
backend/experiments/0014/: model.onnx
backend/experiments/0015/: model.onnx  params.yaml
backend/experiments/0016/: model.onnx
backend/experiments/0017/: model.onnx
backend/experiments/0018/: model.onnx
backend/experiments/0019/: model.onnx
backend/experiments/0020/: model.onnx
backend/metrics/: infer.json
backend/models/: lr-tfidf-baseline.onnx
backend/plots/: .gitignore
backend/src/ml_service/: config.py  data.py  experiments.py  inference.py  logging.py  training.py
backend/src/ml_service/api/: file_process.py  main.py  metrics.py  models.py
backend/stages/: extract_data.py  inference.py  train_model.py
frontend/: Dockerfile  (+2 more)
(+14 files in other folders)
