[project]
name = "ml-service"
version = "0.1.0"
description = "FastAPI service for SMS spam classification."
authors = [
  { name = "Ilya Khorunzhiy", email = "khorunzhiy.ib@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "onnx==1.17.0",
    "onnxruntime==1.22.0",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "joblib==1.5.0",
    "skl2onnx==1.18.0",
]


[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"
