[project]
name = "ml-service"
version = "0.1.0"
description = "FastAPI service for SMS spam classification."
authors = [
  { name = "Ilya Khorunzhiy", email = "khorunzhiy.ib@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "onnx==1.17.0",
    "onnxruntime==1.19.0",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "joblib==1.5.0",
    "skl2onnx==1.18.0",
    "structlog==24.1.0",
    "python-dotenv==1.0.1",
    "torch==2.7.0",
    "tensorboard==2.15.1",
    "dvc[all]==3.50.0",
    "python-multipart==0.0.20",
    "prometheus_fastapi_instrumentator==6.1.0",
    "prometheus_client==0.20.0"
]

[tool.flake8]
max-line-length = 110
